--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -14,5 +14,8 @@
   <button type="button" (click)="goBack()">
     go back
   </button>
+  <button type="button" (click)="save()">
+    save
+  </button>
 
 </div>
